variables.RunHalf.scala.error
Compilation error:
RunHalf:1: error: not found: value getGroundcolor
getGroundcolor() 
^